from sqlmodel import SQLModel, Field
from typing import Optional

class Program(SQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str
    description: Optional[str] = None